# Thyllore-Animation

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  about.hbs  about.toml  build-with-tests.ps1  deny.toml  memo.txt
.cargo/: config.toml
.claude/: last-conversation.md  plan_scene_system.md  settings.local.json
.claude/ExploreHistory/: AnimationSystemArchitecture.md  BoneVisualizationReference.md  FbxRigAndConstraints.md  RigVisualizationUI.md  TimelineWindowDesignReference.md
.claude/IssueHistory/: AnimationMigrationPhase1to6.md  BoneGizmoPositionCalculation.md  ObjectIDOutlineHighlight.md  OffscreenRenderingAndImguiMouseInput.md  OutlineHighlightDesign.md  Std140AlignmentAndPushConstants.md  TimelineAndEditableAnimation.md
.claude/agents/: bug-investigator.md  ecs-architecture-checker.md  expert-explore.md
.claude/rules/: animation.md  app-update.md  coding.md  ecs-architecture.md  logging.md  model-loading.md  module-structure.md  rendering-architecture.md  shaders.md  testing.md
.claude/skills/check-all/: SKILL.md
.claude/skills/check-coding/: SKILL.md
.claude/skills/check-ecs/: SKILL.md
.claude/skills/check-safe-code/: SKILL.md
.github/workflows/: security-audit.yml
docs/: features.md  improvement_plan.md  keyboard_shortcuts.md  log_0.txt  roadmap.md  short-roadmap.md  structure.md
plan/: plan.md
proto/: animation_ml.proto
scripts/: blender_bounds_check.py  blender_fbx_diagnostic.py  blender_gltf_diagnostic.py  blender_gltf_roundtrip.py  create_curve_copilot_model.py  create_dummy_model.py  package.ps1
shaders/: autoExposureAverage.comp  autoExposureHistogram.comp  billboardFragment.frag  billboardVertex.vert  bloomDownsampleFragment.frag  bloomUpsampleFragment.frag  boneFragment.frag  boneVertex.vert  compositeFragment.frag  compositeVertex.vert  dofFragment.frag  fragment.frag  gbufferFragment.frag  gbufferVertex.vert  gizmoFragment.frag  gizmoVertex.vert  gridFragment.frag  gridVertex.vert  imguiFragment.frag  onionSkinCompositeFragment.frag  onionSkinFragment.frag  rayQueryShadow.comp  tonemapFragment.frag  tonemapVertex.vert  vertex.vert
shaders/include/: depth.glsl
src/: lib.rs  main.rs  main.rs.backup  paths.rs
src/animation/: constraint.rs  data.rs  keyframe_search.rs  mod.rs  pose.rs
src/app/: billboard.rs  cleanup.rs  color_test_quad.rs  command_recording.rs  data.rs  frame_context.rs  graphics_resource.rs  gui_data.rs  instance.rs  mod.rs  model_loader.rs  raytracing.rs  render.rs  render_context.rs  scene_model.rs  update.rs  util.rs  viewport.rs
src/asset/: storage.rs
src/debugview/: billboard_debug.rs  fbx_debug.rs  gizmo.rs  grid.rs  mod.rs  shadow_debug.rs  view_mode.rs
src/ecs/: components.rs  context.rs  mod.rs  render_context.rs  resource.rs  systems.rs  world.rs
src/exporter/: fbx_animation.rs  fbx_exporter.rs  gltf_exporter.rs  mod.rs
src/fbx/: fbx.rs
src/gltf/: gltf.rs
src/grpc/: grpc_thread.rs  mod.rs  request.rs  response_converter.rs
src/loader/: bounds_validation_tests.rs  cube.rs  mod.rs  scale_matrix_tests.rs  texture.rs
src/logger/: logger.rs  message_buffer.rs  mod.rs
src/math/: billboard.rs  coordinate_system.rs  math.rs  matrix.rs  mod.rs  quaternion.rs  vector.rs
src/ml/: bone_name_tokenizer.rs  bone_topology.rs  inference_request.rs  inference_thread.rs  mod.rs
src/platform/: events.rs  imgui.rs  key_bindings.rs  mod.rs  platform.rs
src/render/: backend.rs  buffer_handle.rs  mod.rs  ubo.rs
src/renderer/: color_pipeline_tests.rs  command_recording.rs  mod.rs  onion_skin_buffers.rs  scene_renderer.rs
src/scene/: animation.rs  assets.rs  billboard.rs  camera.rs  clip_io.rs  common.rs  components.rs  cube.rs  error.rs  format.rs  graphics_resource.rs  grid.rs  mod.rs  model.rs  raytracing.rs  render_resource.rs  scene.rs  scene_io.rs  systems.rs  world.rs
src/shaders/: compile.bat  compositeFrag.spv  compositeVert.spv  frag.spv  gbufferFrag.spv  gbufferVert.spv  gizmoVert.spv  gridVert.spv  imguiFrag.spv  imguiVert.spv  rayQueryShadow.spv  vert.spv
src/support/: mod.rs
src/system/: loop.rs  mod.rs  system.rs
src/vulkanr/: acceleration_structure.rs  backend.rs  buffer.rs  command.rs  data.rs  descriptor.rs  device.rs  image.rs  mod.rs  pipeline.rs  render.rs  swapchain.rs  vulkan.rs
tests/: asset_dependency_tests.rs  compare_fbx_dom.rs  compare_fbx_structure.rs  ecs_tests.rs  gltf_export_tests.rs  inspect_fbx_binary.rs  integration_tests.rs  model_loading_tests.rs  shader_tests.rs
tools/: compare_fbx_structure.rs
(+328 files in other folders)
