[package]
name = "rust_rendering"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust-rendering"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
log = "0.4"
cgmath = "0.18"
png = "0.17"
pretty_env_logger = "0.4"
thiserror = "1"
tobj = { version = "3", features = ["log"] }
vulkanalia = { version = "=0.26.0", features = ["libloading", "provisional", "window"] }
copypasta = "0.8"
imgui = { path = "./vendor/imgui", features = ["tables-api", "docking"] }
imgui-winit-support = { path = "./vendor/imgui-winit-support" }
winit = "0.29"
raw-window-handle = "0.6"
chrono = "*"
once_cell = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
bincode = "*"
ufbx = "0.10"
rfd = "0.15"
ron = "0.8"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "load-dynamic", "download-binaries", "copy-dylibs", "tls-native"] }

[dependencies.gltf]
version = "1.4"
features = ["extras", "names", "extensions"]