[package]
name = "thyllore-animation"
version = "0.0.1-preview"
edition = "2021"
license = "Apache-2.0"
authors = ["kodai731"]
description = "A real-time animation and rendering engine powered by ECS architecture, built in Rust with Vulkan"
repository = "https://github.com/kodai731/Thyllore-Animation"
build = "build.rs"

[[bin]]
name = "thyllore-animation"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
log = "0.4"
cgmath = "0.18"
png = "0.17"
pretty_env_logger = "0.4"
thiserror = "1"
vulkanalia = { version = "=0.26.0", features = ["libloading", "provisional", "window"] }
copypasta = "0.8"
imgui = { path = "./vendor/imgui", features = ["tables-api", "docking"] }
imgui-winit-support = { path = "./vendor/imgui-winit-support" }
winit = "0.29"
raw-window-handle = "0.6"
chrono = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "2"
ufbx = "0.10"
rfd = "0.15"
ron = "0.8"
fbxcel = { version = "0.9", features = ["writer"] }
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "load-dynamic", "download-binaries", "copy-dylibs", "tls-native"], optional = true }
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[build-dependencies]
tonic-build = { version = "0.12", optional = true }
protox = { version = "0.7", optional = true }

[features]
default = ["ml"]
ml = ["dep:ort"]
text-to-motion = ["dep:tonic", "dep:prost", "dep:tokio", "dep:tonic-build", "dep:protox"]

[dependencies.gltf]
version = "1.4"
features = ["extras", "names", "extensions"]